--- a/MyExpenseManagement/MyExpenseManagement/Views/MainPage.xaml
+++ b/MyExpenseManagement/MyExpenseManagement/Views/MainPage.xaml
@@ -6,52 +6,40 @@
                xmlns:utils="clr-namespace:MyExpenseManagement.Utils"
                xmlns:controls="clr-namespace:MyExpenseManagement.Views.Controls"
                xmlns:vm="clr-namespace:MyExpenseManagement.ViewModels"
+               xmlns:model="clr-namespace:MyExpenseManagement.Models"
                x:TypeArguments="vm:MainViewModel">
     <core:PageBase.Resources>
-        <DataTemplate x:Key="expenseListTemplate">
-            <Label Text="{Binding Amount}"/>
+        <DataTemplate x:Key="expenseListTemplate" x:DataType="{x:Type model:Expense}">
+            <Grid RowDefinitions="Auto, Auto"
+                  Padding="8">
+                <Label Text="{Binding Amount}" TextColor="{StaticResource Primary}"
+                       FontSize="20" FontAttributes="Bold"/>
+                <Label Text="{Binding Category.Description}" FontSize="15"
+                       Grid.Row="1" Margin="0,5,0,0"/>
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Grid.GestureRecognizers>
+            </Grid>
         </DataTemplate>
     </core:PageBase.Resources>
-    <Grid RowDefinitions="Auto, *">
-        <controls:CategoriesControl x:Name="categories"/>
-        <Grid Grid.Row="1" BackgroundColor="{StaticResource Gray100}">
-            <VerticalStackLayout VerticalOptions="Start"
-                             x:Name="root">
+    <Grid VerticalOptions="Fill" BackgroundColor="{StaticResource Gray100}"
+          RowDefinitions="Auto, *" x:Name="root">
 
-
-                <Label x:Name="lbTotal" FontAttributes="Bold" 
-                   TextColor="Red"
-                   FontSize="40" Margin="20,25"/>
-                <HorizontalStackLayout HeightRequest="15" Spacing="5"
-                                   WidthRequest="350" Margin="0,10,0,0">
-
-                    <BoxView x:Name="positive" HeightRequest="15"
-                         CornerRadius="5" Color="{StaticResource Primary}"/>
-                    <BoxView x:Name="negative" HeightRequest="15" 
-                         CornerRadius="5" Color="{StaticResource Secondary}"/>
-                </HorizontalStackLayout>
-                <FlexLayout Direction="Row" AlignItems="Center"
-                        HeightRequest="40" Margin="30,0"
-                        JustifyContent="SpaceBetween">
-
-                    <Label Text="+" FontSize="30" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
-                    <Label Text="-" FontSize="30" FontAttributes="Bold" TextColor="{StaticResource Secondary}"/>
-                </FlexLayout>
-            </VerticalStackLayout>
-            <ScrollView TranslationY="40">
-                <Frame VerticalOptions="Fill"  Margin="0,350,0,0"
-                       CornerRadius="30" Padding="30,30,30,60">
-                    <StackLayout x:Name="expenses"
+        <controls:TotalExpenseControl x:Name="expense" Grid.Row="1"/>
+        <ScrollView Grid.RowSpan="2">
+            <Frame VerticalOptions="Fill"  Margin="0,350,0,-20"
+                       CornerRadius="30" Padding="30">
+                <StackLayout x:Name="expenses"
                                  BindableLayout.ItemsSource="{Binding Expenses}"
                                  BindableLayout.ItemTemplate="{StaticResource expenseListTemplate}">
-                    </StackLayout>
-                </Frame>
-            </ScrollView>
-        </Grid>
+                </StackLayout>
+            </Frame>
+        </ScrollView>
+        <controls:CategoriesControl x:Name="categories" Grid.Row="0"/>
+
 
         <ImageButton Style="{StaticResource FAB}" x:Name="btnNewExpense"
-                     VerticalOptions="End" HorizontalOptions="End"
-                     Grid.Row="1"
+                     VerticalOptions="End" HorizontalOptions="End" Grid.RowSpan="2"
                      BackgroundColor="{StaticResource Primary}">
             <ImageButton.Source>
                 <FontImageSource FontFamily="{x:Static utils:MaterialIcons.FontFamily}"
